log
Fri Mar 20 05:52:07 PM UTC 2026: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:80:22: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   80 |    Stack* auxiliar = createStack();
      |                      ^~~~~~~~~~~
      |                      create_stack
exercises.c:80:22: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
deef825
Fri Mar 20 05:55:07 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:80:22: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   80 |    Stack* auxiliar = createStack();
      |                      ^~~~~~~~~~~
      |                      create_stack
exercises.c:80:22: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
1995eb6
Fri Mar 20 05:55:27 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
0da8719
